--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,17 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    - title: Biography
+      url: /biography
+    - title: Publications
+      url: /publications
+    - title: Blog
+      url: /blog
+    - title: Search
+      url: /search
+      #  url: /year-archive/
+      #- title: "Sample Collections"
+      #url: /collection-archive/
+      #- title: "Sitemap"
+      # url: /sitemap/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
