Update bio blurb

--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Bobby R. Bruce"
   avatar           : "/assets/images/bio-photo.jpg"
-  bio              : "A Postdoctoral Scholar at UC Davis, using this website to publish his works."
+  bio              : "A Project Scientist at UC Davis, using this website to publish his work."
   location         : "Davis, California"
   email            : "bbruce@ucdavis.edu"
   links:
