Add PGP public key link

--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,9 @@ author:
   location         : "Davis, California"
   email            : "bbruce@ucdavis.edu"
   links:
+    - label: "PGP Public Key"
+      icon: "fas fa-fw fa-link"
+      url: "https://keys.openpgp.org/vks/v1/by-fingerprint/70890A2DE6AF941F54B0D4B4BFB741F21AE89009"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://www.bobbybruce.net"
